--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
+        pip install fastapi
     - name: Run tests with pytest
       run: |
         pytest
